POST /invite-users - send emails to user's with active  products
